# jump_models

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  README.template.md  environment.yml  pyproject.toml  requirements.txt
configs/: eval.yaml  train.yaml
configs/callbacks/: batch_size_finder.yaml  default.yaml  default_jump.yaml  default_jump_swa.yaml  default_loss.yaml  default_swa.yaml  jump.yaml  jump_cl_freezer.yaml  jump_loss.yaml  jump_lr.yaml  jump_lr_bs.yaml  jump_swa.yaml  jump_total.yaml  jump_with_lr_bs_finders.yaml  jump_with_lr_finder.yaml  lr_finder.yaml  lr_monitor.yaml  wandb_watch.yaml  wandb_watcher.yaml
configs/data/: basic_jump.yaml  big_jump_cl.yaml  bigger_jump_cl.yaml  jump.yaml  jump_cl.yaml  medium_jump_cl.yaml  mnist.yaml  multiview.yaml  single_source.yaml  small_jump_cl.yaml
configs/debug/: default.yaml
configs/eval/: batch_effect.yaml  batch_effect_fast.yaml  dmso_normed.yaml  evaluators.yaml  fast.yaml  hint.yaml  l2_simple_retrieval.yaml  moa.yaml  ogb.yaml  retrieval.yaml  simple_retrieval.yaml  test_moa.yaml
configs/experiment/: big_frozen.yaml  big_jump_cl.yaml  bigger_jump_cl.yaml  example.yaml  fp_big.yaml  fp_med.yaml  fp_small.yaml  frozen_big.yaml  frozen_med.yaml  frozen_small.yaml  gin_big.yaml  gin_med.yaml  gin_small.yaml  jump_cl.yaml  med_jump_cl.yaml  med_scratch.yaml  small_jump_cl.yaml
configs/extras/: default.yaml
configs/hparams_search/: batch_size.yaml  hparams_search.yaml  jump_cl_otpuna.yaml  (+1 more)
images/: adj.csv
jump_models/: main.py
notebooks/: 0.0-gw-download-missing-images.ipynb  0.1-gw-sanity-check-jump.ipynb  1.0-gw-dataloader-paramsgroup.ipynb  1.0-gw-dataloader.ipynb  1.1-gw-custom-transforms.ipynb  1.2-gw-scaffold-split-projection.ipynb  1.4-gw-read-png.ipynb  2.0-gw-graph-retrieval.ipynb  2.0-gw-moa-task.ipynb  2.1-gw-batch_effect.ipynb  2.1-gw-idr-retrieval-task.ipynb  2.2-gw-retrieval-evaluator.ipynb  2.3-batch-effect-evaluation.ipynb  2.3-gw-evaluate-checkpoints.ipynb  2.3-gw-image_retrieval-evaluation.ipynb  2.4-gw-batch-effect-eval.ipynb  2.5-gw-hint-evaluation.ipynb  3.0-gw-evaluate-checkpoints.ipynb  3.0-gw-image_encoder.ipynb  3.1-gw-wandb-plots.ipynb  3.2-gw-lr_scheduler.ipynb  3.3-gw-bbbc021.ipynb  4.0-gw-coati-try.ipynb  4.0-gw-custom-transforms.ipynb  4.1-gw-multiview-dataset.ipynb  4.2-gw-pna.ipynb  4.3-gw-retrieval-probas.ipynb  4.4-gw-losses.ipynb  4.5-gw-retrieval.ipynb  5-gw-illustrations.ipynb  5.0-gw-retrieval-metric.ipynb  6.0-gw-MAE.ipynb  6.0-scaffold-split.ipynb  6.1-gw-mgm.ipynb  6.3-gw-xclip.ipynb  7.0-gw-checkpoint.ipynb  8.0-gw-download_missing.ipynb  9.0-gw-jump-negatives.ipynb
scripts/: big_runs.sh  coati_runs.sh  evaluate.sh  experiments.sh  first_evaluate.sh  first_runs.sh
src/: cfg_test.py  debug.py  diffusion_train.py  eval.py  eval_moa.py  mae_pretraining.py  mae_pretraining2.py  train.py  train_without_trainer.py
(+415 files in other folders)
